--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "proton",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "c8": "^7.11.3",
-    "eslint": "^8.52.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vitest": "^0.18.0"
-  }
+    "name": "proton",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "test": "vitest run --coverage",
+        "test:watch": "vitest",
+        "lint": "eslint --ext .ts,.tsx .",
+        "lint:fix": "eslint --fix --ext .ts,.tsx . "
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.9.0",
+        "@typescript-eslint/parser": "^6.9.0",
+        "c8": "^7.11.3",
+        "eslint": "^8.52.0",
+        "typescript": "^4.5.4",
+        "vite": "^2.9.9",
+        "vitest": "^0.18.0"
+    }
 }
