--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         permissions:
             contents: read
-            pull-requests: write
+            pull-request: write
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js 20.x
