--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         permissions:
             contents: read
-            pull-request: write
+            pull-requests: write
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js 20.x
@@ -20,9 +20,9 @@ jobs:
             - name: Install dependencies
               run: npm install
             - name: Run tests
-              run: npm test
-            - name: Run code quality checks
-              run: npm run lint
+              run: npx vitest --coverage
             - name: Report Coverage
               if: always()
               uses: davelosert/vitest-coverage-report-action@v2
+            - name: Run code quality checks
+              run: npm run lint
